--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -43,7 +43,7 @@
                     </p>
                     <p class="text-xs font-medium text-gray-500 mb-0">Tags: <span class="font-bold">
                       {% for tag in postOne-tags %}
-                        {{ tag }}{% unless forloop.last %}, {% endunless %}
+                        <a href="/tags/{{tag}}/">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
                       {% endfor %}
                     </span></p>
                     <p class="text-xs font-medium text-gray-500 mb-0">{{postOne.data.date | relativeDate}} | {{ postOne.templateContent | timeToRead }} read</p>
