--- a/src/site/_includes/updated-post.liquid
+++ b/src/site/_includes/updated-post.liquid
@@ -28,7 +28,7 @@
                   <p class="mt-1 mb-0 mt-0">{{date | relativeDate}} | {{ content | timeToRead }} read</p>
                   <p class="font-medium text-daiDark mb-0 mt-0">Tags: <span class="font-bold">
                     {% for tag in postTags %}
-                      {{ tag }}{% unless forloop.last %}, {% endunless %}
+                      <a href="/tags/{{tag}}">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
                     {% endfor %}
                   </span></p>
                   </div>
@@ -50,7 +50,7 @@
                     <p class="mt-1 mb-0 mt-0">{{date | relativeDate}} | {{ content | timeToRead }} read</p>
                     <p class="font-medium text-daiDark mb-0 mt-0">Tags: <span class="font-bold">
                       {% for tag in postTags %}
-                        {{ tag }}{% unless forloop.last %}, {% endunless %}
+                        <a href="/tags/{{tag}}/">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
                       {% endfor %}
                     </span></p>
                   </div>
