--- a/src/site/_layouts/post.liquid
+++ b/src/site/_layouts/post.liquid
@@ -9,9 +9,9 @@ layout: base.liquid
     </div>
   </div>
   </div> -->
-  <div class="grid grid-cols-4 gap-2 mt-36">
-    <div class="grid-span-1 h-52 {% if tags contains 'hash-developments' %}devs-banner{% elsif tags contains 'hash-digital' %}digital-banner{% else %}devs-banner{% endif %}"></div>
-    <div class="grid-span-3 h-52">Developments Blog</div>
+  <div class="grid grid-cols-2 gap-2 bg-daiBlue blog-banner sm:mt-[91px] md:mt-[111px] lg:mt-[128px]">
+    <div class=" h-52 {% if tags contains 'hash-developments' %}devs-banner{% elsif tags contains 'hash-digital' %}digital-banner{% else %}devs-banner{% endif %}"></div>
+    <div class="h-52 bg-daiBlue pr-4 flex flex-wrap items-center"><h2 class="text-3xl md:text-4xl lg:text-5xl mb-0"><span class="font-bold">DEVELOPMENTS</span> <span class="font-light">BLOG</span></h2></div>
   </div>
   
   
