fixing the margin on the photos in prose containers

--- a/src/site/assets/tailwind.css
+++ b/src/site/assets/tailwind.css
@@ -51,6 +51,9 @@
   font-weight: bold;
   text-decoration: underline;
 }
+.prose img{
+  margin-bottom: 0px;
+}
 .prose a:hover{
   text-decoration: none;
 }
