--- a/src/site/developments.liquid
+++ b/src/site/developments.liquid
@@ -10,14 +10,12 @@ pagination:
 ---
 <div class="base-container mt-[92px]">
   <!-- BLOGS HEADER -->
-  <div class="blogs-header">
+  <div class="blogs-header developments">
     <div class="pb-6">
       <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-between">
         <div class="max-w-xl pr-3">
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">DEVELOPMENTS <span class="font-light">BLOG</span></h1>
-          <p class="mt-5 text-xl text-daiDark">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
-          <button onclick="window.location.href='/'"class="daiButtons mb-4">Developments</button>
-          <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4">Digital@DAI</button>
+          <p class="mt-5 text-xl text-daiDark">Developments is DAI’s newsletter. News and feature articles, opinion pieces, and interviews highlight DAI projects and offer insight into global development issues of the day.</p>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative blog-search">
