--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -16,7 +16,7 @@ pagination:
         <div class="max-w-xl pr-3">
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h1>
           <p class="mt-5 text-xl text-daiDark">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
-          <button onclick="window.location.href='/'"class="daiButtons mb-4">Developments</button>
+          <button onclick="window.location.href='/developments'"class="daiButtons mb-4">Developments</button>
           <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4">Digital@DAI</button>
         </div>
         <div class="mt-16 w-full max-w-xs">
