--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -15,7 +15,8 @@ pagination:
       <div class="max-w-7xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-between">
         <div class="max-w-xl pr-3">
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h1>
-          <p class="mt-5 text-xl text-daiDark">By freely sharing what we learn, we have built a reputation as thought leaders who translate ideas into action. <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">DIGITAL@DAI</span> is our blog on what we're learning in the rapidly emerging field of ICT4D.</p>
+          <p class="mt-5 text-xl text-daiDark">
+            <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, research, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">Digital@DAI</span> is our blog on what we're learning in the rapidly emerging field of digital acceleration.</p>
           <button onclick="window.location.href='/developments'"class="daiButtons mb-4">Developments</button>
           <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4">Digital@DAI</button>
         </div>
