--- a/src/site/_layouts/post.liquid
+++ b/src/site/_layouts/post.liquid
@@ -9,12 +9,12 @@ layout: base.liquid
     </div>
   </div>
   </div> -->
-  <a class="block" href="/developments">
+<!--   <a class="block" href="/developments">
     <div class="grid-cols-6 gap-2 bg-daiBlue blog-banner  grid">
       <div class="col-span-1 md:h-[40px] lg:h-[49px] xl:h-[69px] {% if tags contains 'hash-developments' %}devs-banner{% elsif tags contains 'hash-digital' %}digital-banner{% else %}devs-banner{% endif %}"></div>
       <div class="col-span-5 md:h-[40px] lg:h-[49px] xl:h-[69px] bg-daiBlue pr-4 flex flex-wrap items-center"><h2 class="text-lg lg:text-2xl  mb-0"><span class="font-bold">DEVELOPMENTS</span> <span class="font-light">BLOG</span></h2></div>
     </div>
-  </a>
+  </a> -->
   {% unless image == blank %}
     {% include 'updated-post.liquid' %}
   {% else %}
