--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -8,7 +8,7 @@
 {% assign postOne-tags = postOne.data.tags | pluckNot:"hash" %}
 <div class="bg-daiLightGray">
   <div class="max-w-7xl mx-auto py-16 sm:py-24">
-  <div class="back-box border-[16px] border-white h-[1700px] w-[60%] z-0 absolute ml-10">
+  <div class="back-box border-[16px] border-white h-[1500px] xl:h-[1650] w-[60%] z-0 absolute ml-10">
       <h2 class="mt-10 ml-8 text-4xl uppercase"><span class="font-bold">Featured</span> <span class="font-normal">Articles</span></h2>
       <hr class="daiBar ml-8 border-y-4 w-14 border-daiDark">
   </div>
