--- a/src/site/_includes/universal-post.liquid
+++ b/src/site/_includes/universal-post.liquid
@@ -1,5 +1,5 @@
 <div class="relative py-16 bg-white overflow-hidden new-posts">
-  <div class="relative px-4 sm:px-6 lg:px-8">
+  <div class="relative pt-[130px] mx-auto max-w-7xl px-4 sm:px-6 sm:pt-[160px] lg:pt-[180px]">
     <div class="text-lg max-w-prose mx-auto">
       <h2 class="mt-2 block text-3xl text-left leading-8 font-bold tracking-tight text-gray-900 sm:text-4xl">{{title}}</h2>
       <hr class="daiBar border-y-4 w-14 border-daiDark">
