--- a/src/site/_includes/updated-post.liquid
+++ b/src/site/_includes/updated-post.liquid
@@ -8,19 +8,37 @@
       <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2" fill="#e4e5e6" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
         <polygon points="50,0 100,0 50,100 0,100" />
       </svg>
-      <main class="pt-10 mx-auto max-w-7xl px-4 sm:pt-12 sm:px-6 md:pt-16 lg:pt-20 lg:px-8 xl:pt-28">
+      <main class="pt-[130px] mx-auto max-w-7xl px-4 sm:px-6 sm:pt-[160px] lg:pt-[180px]">
         <div class="sm:text-left">
           <h1 class="text-4xl tracking-tight font-bold text-daiDark sm:text-5xl md:text-6xl">{{ title }}</h1>
           <hr class="daiBar border-y-4 lg:border-y-[6px] w-14 lg:w-[6rem] border-daiDark">
           <div class="mt-5 sm:mt-8 sm:flex  lg:justify-start">
               {% if postAuthors[1] %}
               <!-- MULTIPLE AUTHORS -->
+              <!-- If there are multiple authors render either a group svg or multiple author images -->
                 <div class="flex">
+                  {% unless postAuthors.length > 3 %}
+                  <!-- If there are less than three authors, render inidividual images or generic author svg -->
+                    <div class="mr-4 flex-shrink-0 self-center">
+                      {% assign authorpicindex = 0 %}
+                      {% for author in postAuthors %}
+                      {% assign authorpicindex = authorpicindex | plus:1 %}
+                      {% assign postAuthor-details = experts | where:"name", author %}
+                        {% if postAuthor-details[0].image %}
+                          <img class="inline-block h-14 w-14 rounded-full border-[1px] border-daiDark border-solid author-pic i{{authorpicindex}}" src="{{postAuthor-details[0].image}}" alt="">
+                        {% else  %}
+                          <img src="/assets/images/author.svg" class="w-14 h-14 inline-block author-pic i{{authorpicindex}}" alt=""> 
+                        {%  endif  %}
+                      {% endfor %}
+                    </div>
+                  {% else %}
+                  <!-- If there are more than three authors render generic auhtors svg -->
                   <div class="mr-4 flex-shrink-0 self-center">
-                    <img src="/assets/images/authors.svg" class="w-24 h-24" alt="">
+                    <img src="/assets/images/authors.svg" class="w-14 h-14 inline-block author-pic i{{authorpicindex}}" alt=""> 
                   </div>
+                  {% endunless %}
                   <div>
-                    <h4 class="capitalize text-lg font-bold mb-0">
+                    <h4 class="capitalize text-lg font-bold mb-0 grow">
                     {% for author in postAuthors %}
                       {% assign postAuthor-details = experts | where:"name", author %}<a href="{{postAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}">{{author}}</a>{% unless forloop.last %}, {% endunless %}
                     {% endfor %}
@@ -31,6 +49,9 @@
                       <a href="/tags/{{tag}}">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
                     {% endfor %}
                   </span></p>
+                  <p class="mb-0"><a href="/developments" class="inline-block pt-3">
+                    <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-bold {% if post.data.tags contains 'hash-developments' %}bg-daiBlue{% elsif post.data.tags contains 'hash-devalts' %}bg-daiDark{% else %}bg-daiBlue{% endif %} text-white">{% if post.data.tags contains 'hash-developments' %}Developments{% elsif post.data.tags contains 'hash-devalts' %}Developing Alternatives{% else %}Developments{% endif %}</span>
+                  </a></p>
                   </div>
                 </div>
               {% else %}
@@ -39,13 +60,13 @@
                 <div class="flex">
                   <div class="mr-4 flex-shrink-0 self-center">
                     {% if postAuthor-details[0].image %}
-                      <img class="inline-block h-24 w-24 rounded" src="{{postAuthor-details[0].image}}" alt="">
+                      <img class="inline-block h-24 w-24 rounded-full" src="{{postAuthor-details[0].image}}" alt="">
                     {% else %}
                     <img src="/assets/images/author.svg" class="w-24 h-24" alt="">
                     {% endif %}
                   </div>
                   <div>
-                    <h4 class="text-lg font-bold capitalize mb-0"><a href="">{{postAuthors[0]}}</a></h4>
+                    <h4 class="text-lg font-bold capitalize mb-0"><a href="{{postAuthor-details[0].link}}">{{postAuthors[0]}} </a></h4>
                     <p class="mt-1 mb-0 mt-0">{{postAuthor-details[0].title}}</p>
                     <p class="mt-1 mb-0 mt-0">{{date | relativeDate}} | {{ content | timeToRead }} read</p>
                     <p class="font-medium text-daiDark mb-0 mt-0">Tags: <span class="font-bold">
@@ -53,6 +74,9 @@
                         <a href="/tags/{{tag}}/">{{tag}}</a>{% unless forloop.last %}, {% endunless %}
                       {% endfor %}
                     </span></p>
+                    <p class="mb-0"><a href="/developments" class="inline-block pt-3">
+                      <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-bold {% if post.data.tags contains 'hash-developments' %}bg-daiBlue{% elsif post.data.tags contains 'hash-devalts' %}bg-daiDark{% else %}bg-daiBlue{% endif %} text-white">{% if post.data.tags contains 'hash-developments' %}Developments{% elsif post.data.tags contains 'hash-devalts' %}Developing Alternatives{% else %}Developments{% endif %}</span>
+                    </a></p>
                   </div>
                 </div>
               {% endif %}
