--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -8,7 +8,7 @@ pagination:
   alias: more-posts
   reverse: true
 ---
-<div class="base-container mt-[92px]">
+<div class="base-container mt-[65px]">
   <!-- BLOGS HEADER -->
   <div class="blogs-header">
     <div class="pb-6">
@@ -17,8 +17,8 @@ pagination:
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h1>
           <p class="mt-5 text-xl text-daiDark">
             <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, research, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">Digital@DAI</span> is our blog on what we're learning in the rapidly emerging field of digital acceleration.</p>
-          <button onclick="window.location.href='/developments'"class="daiButtons mb-4">Developments</button>
-          <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4">Digital@DAI</button>
+          <button onclick="window.location.href='/developments'"class="daiButtons mb-4 text-base xl:text-lg">Developments</button>
+          <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4 text-base xl:text-lg">Digital@DAI</button>
         </div>
         <div class="mt-16 w-full max-w-xs">
           <div class="mt-1.5 relative blog-search">
