--- a/src/site/_includes/updated-post.liquid
+++ b/src/site/_includes/updated-post.liquid
@@ -66,7 +66,7 @@
                     {% endif %}
                   </div>
                   <div>
-                    <h4 class="text-lg font-bold capitalize mb-0"><a href="{{postAuthor-details[0].link}}">{{postAuthors[0]}} </a></h4>
+                    <h4 class="text-lg font-bold capitalize mb-0"><a href="{{postAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}">{{postAuthors[0]}} </a></h4>
                     <p class="mt-1 mb-0 mt-0">{{postAuthor-details[0].title}}</p>
                     <p class="mt-1 mb-0 mt-0">{{date | relativeDate}} | {{ content | timeToRead }} read</p>
                     <p class="font-medium text-daiDark mb-0 mt-0">Tags: <span class="font-bold">
