fixing up back-box in recent articles and title spacing in updated posts

--- a/src/site/_includes/updated-post.liquid
+++ b/src/site/_includes/updated-post.liquid
@@ -10,7 +10,7 @@
       </svg>
       <main class="pt-[130px] mx-auto max-w-7xl px-4 sm:px-6 sm:pt-[160px] lg:pt-[180px]">
         <div class="sm:text-left">
-          <h1 class="text-4xl tracking-tight font-bold text-daiDark sm:text-5xl md:text-6xl">{{ title }}</h1>
+          <h1 class="text-4xl tracking-tight font-bold text-daiDark sm:text-5xl md:text-6xl pr-[20px]">{{ title }}</h1>
           <hr class="daiBar border-y-4 lg:border-y-[6px] w-14 lg:w-[6rem] border-daiDark">
           <div class="mt-5 sm:mt-8 sm:flex  lg:justify-start">
               {% if postAuthors[1] %}
