--- a/src/site/_includes/more-news.liquid
+++ b/src/site/_includes/more-news.liquid
@@ -15,13 +15,6 @@
           <!-- CARD LOOP -->
           {% for post in more-posts limit:30 offset:9 %}
           <div>
-            {% unless title == 'Developments' %}
-              <div>
-                <a href="/developments" class="inline-block">
-                  <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-bold {% if post.data.tags contains 'hash-developments' %}bg-daiBlue{% elsif post.data.tags contains 'hash-devalts' %}bg-daiDark{% else %}bg-daiBlue{% endif %} text-white">{% if post.data.tags contains 'hash-developments' %}Developments{% elsif post.data.tags contains 'hash-devalts' %}Developing Alternatives{% else %}Developments{% endif %}</span>
-                </a>
-              </div>
-            {% endunless %}
             <a data-turbo="false" href="{{ post.url }}" class="block mt-4">
               <p class="text-xl font-semibold text-gray-900">{{ post.data.title }}</p>
             </a>
@@ -33,10 +26,10 @@
                 <img src="/assets/images/authors.svg" class="w-9 h-9" alt="">
               </div>
               <div class="ml-3">
-                <p class="text-sm font-medium mb-0 text-gray-900">
+                <p class="text-sm font-medium mb-0 text-gray-900 capitalize">
                   {% for author in morePostAuthors %}
                   {% assign moreAuthor-details = experts | where:"name", author %}
-                  <a class="hover:brightness-95 capitalize" href="{{moreAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}"> {{author}} </a>{% unless forloop.last %}, {% endunless %}
+                  <a class="hover:brightness-95 capitalize" href="{{moreAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}"> {{author | capitalize }} </a>{% unless forloop.last %}, {% endunless %}
                   {% endfor %}
                 </p>
                 <div class="flex space-x-1 text-sm text-gray-500">
@@ -59,8 +52,8 @@
                   {% endif %}
               </div>
               <div class="ml-3">
-                <p class="text-sm font-medium mb-0 text-gray-900">
-                  <a href="{{ moreAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}"> {{author}} </a>
+                <p class="text-sm font-medium mb-0 text-gray-900 capitalize">
+                  <a href="{{ moreAuthor-details[0].link | default:"https://www.dai.com/who-we-are/the-team"}}"> {{author | capitalize}} </a>
                 </p>
                 <div class="flex space-x-1 text-sm text-gray-500">
                   <time datetime="{{post.data.date}}"> {{post.data.date | relativeDate}}</time>
