--- a/src/site/index.liquid
+++ b/src/site/index.liquid
@@ -16,7 +16,7 @@ pagination:
         <div class="max-w-xl pr-3">
           <h1 class="text-4xl font-extra-bold text-daiDark sm:text-5xl sm:tracking-tight lg:text-6xl">Our Blogs</h1>
           <p class="mt-5 text-xl text-daiDark">
-            <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, research, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">Digital@DAI</span> is our blog on what we're learning in the rapidly emerging field of digital acceleration.</p>
+            <span class="italic font-bold">Developments</span> is DAI’s newsletter, offering feature articles, research, opinion pieces, and interviews on DAI projects and global development issues. <span class="italic font-bold">Digital@DAI</span> is our blog on what we're learning in the field of digital acceleration.</p>
           <button onclick="window.location.href='/developments'"class="daiButtons mb-4 text-base xl:text-lg">Developments</button>
           <button onclick="window.location.href='https://dai-global-digital.com'"class="daiButtons mb-4 text-base xl:text-lg">Digital@DAI</button>
         </div>
