--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -16,13 +16,13 @@
   <meta name="twitter:image" content="{{ site.url }}{{ page.social-image | default: "https://www.dai.com/uploads/social-image.jpg" }}">
   <title>{{ title }} &middot; {{ site.title }}</title>
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.url }}/assets/style.css">
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/legacy.css">
+  <link rel="stylesheet" href="{{ site.url }}/assets/style.css?v=40">
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/legacy.css?v=40">
   <!-- Should I add some kind of time based paramater to the CSS URL for cache busting? -->
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.png">
   <!-- Javascript -->
-<script type="text/javascript" src="/assets/js/site.js"></script>
+<script type="text/javascript" src="/assets/js/site.js?v=40"></script>
 <!-- Should I add some kind of time based paramater to the JS URL for cache busting? -->
 <script type="text/javascript" src="/assets/js/turbo.js"></script>
   <!-- proxima nova hosted at typekit -->
