--- a/src/site/assets/tailwind.css
+++ b/src/site/assets/tailwind.css
@@ -13,6 +13,10 @@
   background-image: url(/assets/images/devs-header-tall.png);
   background-position: center;
 }
+.blogs-header.unburdened{
+  background-image: url(/assets/images/unburdened-banner.jpg);
+  background-position: center;
+}
 .blog-banner{
   margin-top: 65px;
 }
@@ -378,4 +382,29 @@ div.kg-gallery-image img{
 }
 .author-pic.i4{
   left: -30%;
+} 
+.episode-banner-1{
+  background-image: url('/assets/images/episode-1-banner.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.episode-banner-2{
+  background-image: url('/assets/images/episode-2-banner.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.episode-banner-3{
+  background-image: url('/assets/images/episode-3-banner.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.episode-banner-4{
+  background-image: url('/assets/images/episode-4-banner.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.episode-banner-5{
+  background-image: url('/assets/images/episode-5-banner.jpg');
+  background-position: center;
+  background-size: cover;
 }
