--- a/src/site/_layouts/base.liquid
+++ b/src/site/_layouts/base.liquid
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   {% include 'iehacks.liquid' %}
   {% include 'head.liquid' %}
-  <body class="" >
+  <body class="covid" >
     <div class="wrapper">
       {% include 'header.liquid' %}
           {{ content }}
