--- a/src/site/podcast.liquid
+++ b/src/site/podcast.liquid
@@ -1,5 +1,5 @@
 ---
-permalink: unburdened-podcast
+permalink: unburdened-podcast.html
 layout: base.liquid
 description: Podcast Index Page
 title: Unburdened Podcast
@@ -9,7 +9,7 @@ title: Unburdened Podcast
   <!-- BLOGS HEADER -->
   <div class="blogs-header unburdened">
     <div class="pb-6">
-      <div class="mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-between items-center">
+      <div class="mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-around items-center">
         <div class="max-w-xl pr-3" style="width: 100%;">
           <img src="/assets/images/logo.svg" alt="">
         </div>
@@ -17,7 +17,7 @@ title: Unburdened Podcast
           <div class="mt-1.5 relative blog-search">
             <div>
               <div class="mt-1 w-full">
-                <p class="mt-5 text-xl text-white">Lightening our load by tackling big global health questions that aren't related to healthcare.</p>
+                <p class="mt-5 text-xl text-white">Our cut on global health issues that go beyond health care.</p>
               </div>
             </div>
           </div>
@@ -70,7 +70,7 @@ title: Unburdened Podcast
             </h3>
             <!-- PODCAST PREVIEW -->
             <div class="post-preview bg-white p-8">
-              <h2 class="text-3xl">Can gender equity make us healthier</h2>
+              <h2 class="text-3xl">Can gender equality make us healthier?</h2>
               <hr class="daiBar border-y-4 w-14 mb-4 border-daiDark">
               <p class="mb-8">Most of us agree that equality is a good thing, but is there more than a moral argument for making our societies more equal? Can gender equality actually make our communities and countries healthier?</p>
               
