--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -6,7 +6,7 @@
   <!-- Enable responsiveness on mobile devices -->
   <meta name="viewport" content="">
   <meta name="keywords" content="{{ site.title }} | {{ title }}">
-  <meta name="description" content="{{ title }} &middot; {{ site.description }}">
+  <meta name="description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond health care.{% else %} {{ site.description }} {% endif %}">
   <!-- Enable twitter card magic -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daiglobal">
