--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -6,7 +6,7 @@
   <!-- Enable responsiveness on mobile devices -->
   <meta name="viewport" content="">
   <meta name="keywords" content="{{ site.title }} | {{ title }}">
-  <meta name="description" content="{{ title }} &middot; {{ site.description }}">
+  <meta name="description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond health care.{% else %} {{ site.description }} {% endif %}">
   <!-- Enable twitter card magic -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daiglobal">
@@ -17,8 +17,8 @@
   <meta property="og:image" content="https://og-image-testing-bryanschuetz.vercel.app/api/param?title={{title | url_encode | default: "https://www.dai.com/uploads/social-image.jpg" }}">
   <title>{{ title }} &middot; {{ site.title }}</title>
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.url }}/assets/style.css?v=41">
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/legacy.css?v=41">
+  <link rel="stylesheet" href="{{ site.url }}/assets/style.css?v=42">
+  <link rel="stylesheet" href="{{ site.url }}/assets/css/legacy.css?v=42">
   <!-- Should I add some kind of time based paramater to the CSS URL for cache busting? -->
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.png">
