--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -6,13 +6,13 @@
   <!-- Enable responsiveness on mobile devices -->
   <meta name="viewport" content="">
   <meta name="keywords" content="{{ site.title }} | {{ title }}">
-  <meta name="description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond health care.{% else %} {{ site.description }} {% endif %}">
+  <meta name="description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond healthcare.{% else %} {{ site.description }} {% endif %}">
   <!-- Enable twitter card magic -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@daiglobal">
   <meta name="twitter:creator" content="@daiglobal">
   <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{% if page.summary %}{{ page.summary | strip_html | truncate: 300 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="twitter:description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond healthcare.{% else %} {{ site.description }} {% endif %}">
   <meta name="twitter:image" content="https://og-image-testing-bryanschuetz.vercel.app/api/param?title={{title | url_encode | default: "https://www.dai.com/uploads/social-image.jpg" }}">
   <meta property="og:image" content="https://og-image-testing-bryanschuetz.vercel.app/api/param?title={{title | url_encode | default: "https://www.dai.com/uploads/social-image.jpg" }}">
   <title>{{ title }} &middot; {{ site.title }}</title>
