--- a/src/site/_includes/featured-articles.liquid
+++ b/src/site/_includes/featured-articles.liquid
@@ -107,7 +107,7 @@
       <div class="bg-daiBlue">
         <h3 class="uppercase text-white pl-3 sm:pl-4 md:pl-6 py-6 mb-0">Developments</h3>
       </div>
-      <div class="feature-image aspect-square" style="background: url('{{ post.data.image | default:default-feature}}'); background-position: center;">
+      <div class="feature-image aspect-square" style="background: url('{{ post.data.image | default:default-feature}}'); background-position: center; background-size: cover;">
       </div>
       <div class="post-details p-8">
         {% if postAuthors[1]  %}
