--- a/src/site/podcast.liquid
+++ b/src/site/podcast.liquid
@@ -37,7 +37,7 @@ title: Unburdened Podcast
   </div>
 <div class="bg-[#F7F7F7] ">
   <div class="max-w-4xl mx-auto py-8 sm:py-24">
-    <h2 class="mt-10 text-4xl">We all know health issues weigh us down.</h2>
+    <h2 class="mt-10 text-4xl">We all know health issues weigh us down</h2>
       <hr class="daiBar mb-4 border-y-4 w-14 border-daiDark">
     <div class="container max-w-4xl">
       <p>And when we think about health, we probably think about our individual health issues and wellbeing, or a disease we’ve had, or past surgery, or some other personal burden. </p>
