speeding up local builds by ignoring posts

--- a/src/site/_layouts/podcast.liquid
+++ b/src/site/_layouts/podcast.liquid
@@ -39,7 +39,7 @@ layout: base.liquid
           </li>
           <li>
             <strong class="text-white">Artwork & Brand Design</strong>
-            <p class="mt-0 mb-0 h leading-4">Kellie Dubios</p>
+            <p class="mt-0 mb-0 h leading-4">Kellie Dubois</p>
             <p class="mt-0 mb-0 h leading-4">Art Director, DAI</p>
           </li>
         </ul>
