--- a/src/site/_layouts/podcast.liquid
+++ b/src/site/_layouts/podcast.liquid
@@ -18,7 +18,6 @@ layout: base.liquid
       </div>
     </div>
   </div>
-  {{item.embed}}
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-0 bg-daiLightGray">
     <div class="bg-daiGray02 grid place-items-center lg:place-items-start">
       <a href="/unburdened-podcast"><img src="/assets/images/series-image.png" alt=""></a>
@@ -48,6 +47,7 @@ layout: base.liquid
     <div class="lg:col-span-2 bg-daiLightGray p-8 grid place-items-center h-full">
       <div class="prose h-full grid">
         <div class="desc">
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/{{item.id}}?h=144291e4dc&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;texttrack=en" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="UNBURDENED Podcast S1"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <h2 class="text-2xl tracking-tight font-bold text-daiDark sm:text-3xl md:text-4xl ">{{ item.title }}</h2>
           <hr class="daiBar border-y-4 lg:border-y-[6px] w-14 lg:w-[6rem] border-daiDark mb-4">
           {{item.fulldesc | markdownify }}
