--- a/src/site/developments.liquid
+++ b/src/site/developments.liquid
@@ -37,7 +37,7 @@ pagination:
     {% include 'more-news.liquid' %}
 </div>
 
-<!-- THIS FUCKING SHIT SHOULD BE HERE -->
+<!-- SEARCH -->
 {% raw %}
 <script>
   var client = algoliasearch("R7MRY12BR6", "3ed9dbeffe898c2c8ebe0ded9d9144bd");
