updating other search instances

--- a/src/site/tags.liquid
+++ b/src/site/tags.liquid
@@ -41,8 +41,8 @@ permalink: /tags/{{ tag | slugify }}/
 <!-- THIS FUCKING SHIT SHOULD BE HERE -->
 {% raw %}
 <script>
-  var client = algoliasearch("R7MRY12BR6", "3ed9dbeffe898c2c8ebe0ded9d9144bd");
-  var index = client.initIndex('Publications');
+  var client = algoliasearch("L03CYX2AZ5", "e5b8a9fea3d0f6e87fc6be04fb6fd4a8");
+  var index = client.initIndex('netlify_5dd4f337-db5a-46f6-a6a6-1481474a509c_master_all');
   //initialize autocomplete on search input (ID selector must match)
   autocomplete('#aa-search-input',
     { hint: false, debug: true, autoselect: true, keyboardShortcuts: ['s', '/'] }, {
