fixing social share image cards

--- a/src/site/_includes/head.liquid
+++ b/src/site/_includes/head.liquid
@@ -14,8 +14,8 @@
   <meta name="twitter:title" content="{{ title }}">
   <meta name="twitter:description" content="{{ title }} &middot; {% if page.url contains '/unburdened-podcast' or page.url contains '/unburdened-season-1' %}Our cut on global health issues that go beyond healthcare.{% else %} {{ site.description }} {% endif %}">
   {% if image != blank %}
-    <meta name="twitter:image" content="{{image}}">
-    <meta property="og:image" content="{{image}}">  
+<meta name="twitter:image" content="{% if image contains 'unsplash' %}{{image}}{% else %}https://dai-global-developments.com{{image}}{% endif %}">
+    <meta property="og:image" content="{% if image contains 'unsplash' %}{{image}}{% else %}https://dai-global-developments.com{{image}}{% endif %}">  
   {% else %}
     
   {% endif %}
