adding support for new podcast

--- a/src/site/practice-partnerships.liquid
+++ b/src/site/practice-partnerships.liquid
@@ -1,5 +1,5 @@
 ---
-permalink: practice-of-partnership-podcast.html
+permalink: practiceofpartnership-podcast.html
 layout: base.liquid
 description: Podcast Index Page
 title: Practice of Partnership Podcast
@@ -9,7 +9,7 @@ title: Practice of Partnership Podcast
   <!-- BLOGS HEADER -->
   <div class="blogs-header practice-partnership">
     <div class="pb-6">
-      <div class="mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-around items-center">
+      <div class="mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:px-8 lg:flex lg:justify-evenly items-center">
         <div class="max-w-xl pr-4" style="width: 100%;">
           <img src="/assets/images/practice-of-partnerships-logomark.svg" alt="" style="height: 250px;">
         </div>
